--- a/views/view.pug
+++ b/views/view.pug
@@ -7,4 +7,7 @@ html
         ul
             each topic in topics
                 li
-                    a(href='/topic/'+topic)= topic                   
+                    a(href='/topic/'+topic)= topic
+        article
+            h2= title 
+            = description                  
